--- a/VlimsApp/ClientApp/src/app/modules/manager/components/Print/document-print.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/Print/document-print.component.html
@@ -1,76 +1,134 @@
 
 <div class="container-fluid">
   <div class="row p-2">
-    <div class="col">
+      <div class="col">
+          <div class="d-flex justify-content-between align-items-center">
+            <h4 class="page-title flex-grow-1">Document Print Request</h4>
 
-      <div class="d-flex justify-content-between align-items-center">
-        <h4 class="page-title flex-grow-1">Document Print Request</h4>
-        <div class="back-icon" style="margin-right: 10px;">
-          <a href="javascript:void(0);" onclick="history.back();">
-              <i class="bi bi-arrow-left-circle-fill" style="font-size: 30px;"></i>
-          </a>
-      </div>
-        <div class="d-flex page-title-actions">
-          <div class="input-group">
-            <input type="text" class="form-control" pInputText type="text" (input)="templatesTable.filterGlobal($any($event.target)?.value, 'contains')"  placeholder="Search" />
-            <span class="input-group-text"><i class="fas fa-search"></i></span>
+              <div class="back-icon" style="margin-right: 10px;">
+                  <a href="javascript:void(0);" onclick="history.back();">
+                      <i class="bi bi-arrow-left-circle-fill" style="font-size: 30px;"></i>
+                  </a>
+              </div>
+              
+              <div class="d-flex page-title-actions">
+                  <div class="input-group custom-input-group">
+                      <!-- Magnifying glass icon -->
+                      <span class="input-group-text custom-input-group-text">
+                          <i class="fas fa-search custom-search-icon"></i>
+                      </span>
+                      <input type="text" class="form-control custom-input" pInputText type="text" (input)="templatesTable.filterGlobal($any($event.target)?.value, 'contains')"  placeholder="Search">
+                  </div>
+                    
+                  <button class="btn btn-primary mx-2" type="button" (click)="navigateToAddPrint()" *ngIf="access">New</button>
+              </div>
           </div>
-          <button class="btn btn-primary mx-2" type="button" (click)="navigateToAddPrint()" *ngIf="access">New</button>
-        </div>
       </div>
-    </div>
   </div>
-  <div class="row p-2">  
-    <div class="col">
-      <div class="p-4 bg-white shadow-dark rounded-2">
-        <p-table #templatesTable
-         [value]="requests"
-         [globalFilterFields]="['Document Type','Document Name','Document Number','Printed On','Printed by','Print Count']"
-         tableStyleClass="table table-striped" [rows]="itemsPerPage"
-        [paginator]="true" [totalRecords]="requests.length"
-        [rowsPerPageOptions]="rowsPerPageOptions" >
-          <ng-template pTemplate="header">
-            <tr>
-              <th>S.No</th>              
-              <th pSortableColumn="documenttype" style="width:20%">Document Type <p-sortIcon field="documenttype"></p-sortIcon></th>
-              <th pSortableColumn="documnetname" style="width:25%">Document Name<p-sortIcon field="documentname"></p-sortIcon></th>
-              <th pSortableColumn="documentnumber" style="width:20%">Document Number<p-sortIcon field="documentnumber"></p-sortIcon></th>
-              <th pSortableColumn="modifiedDate" style="width:100px">Printed On <p-sortIcon field="modifiedDate"></p-sortIcon></th>
-              <th pSortableColumn="workflow" style="width:100px">Printed by <p-sortIcon field="modifiedby"></p-sortIcon></th>
-              <th pSortableColumn="noofcopies" style="width:100px">Print Count <p-sortIcon field="noofcopies"></p-sortIcon></th>
-              <!-- <th pSortableColumn="Status" style="width:100px">Status <p-sortIcon field="Status"></p-sortIcon></th> -->
-              <th style="width:80px">Actions</th>
-
-            </tr>
-          </ng-template>
-          <ng-template pTemplate="body" let-doc let-i="rowIndex">
-            <tr>
-              <td>{{ i + 1 }}</td>              
-              <td>{{doc?.printtype}}</td>
-              <td>{{doc?.documenttitle}}</td>
-              <td>{{doc?.documentNumber}}</td>
-              <td>{{doc?.modifiedDate | date}}</td>
-              <td>{{doc?.modifiedBy}}</td>
-              <td>{{doc?.noofcopies}}</td>
-
-              <!-- <td><span class="status" [ngClass]="getStatusClass(doc['status'])">{{doc.status}} </span></td> -->
-              <td class="text-center" (click)="editdoc(doc)" *ngIf="access && doc?.status==='In-Progress'"><i class="bi bi-pencil"></i></td>
-              <td class="text-center" *ngIf="!access">
-                <i class="bi bi-lock bi-lg" 
-                [ngClass]="{'text-primary':true}"
-                title="No Permissions">
-                </i>
-              </td>
-              <td class="text-center" *ngIf="doc?.status==='Approved'">
-                <i class="bi bi-lock bi-lg" 
-                [ngClass]="{'text-primary':true}"
-                title="Approved">
-                </i>
-              </td>
-            </tr>
-          </ng-template>
-        </p-table>
+  <div class="row p-2">
+      <div class="col">
+          <div class="p-4 bg-white shadow-dark rounded-2">
+            <p-table #templatesTable
+            [value]="requests"
+            [globalFilterFields]="['Document Type','Document Name','Document Number','Printed On','Printed by','Print Count']"
+            tableStyleClass="table table-striped" [rows]="itemsPerPage"
+           [paginator]="true" [totalRecords]="requests.length"
+           [rowsPerPageOptions]="rowsPerPageOptions" >
+             <ng-template pTemplate="header">
+               <tr>
+                 <th>S.No</th>              
+                 <th pSortableColumn="documenttype" style="width:20%">Document Type <p-sortIcon field="documenttype"></p-sortIcon></th>
+                 <th pSortableColumn="documnetname" style="width:25%">Document Name<p-sortIcon field="documentname"></p-sortIcon></th>
+                 <th pSortableColumn="documentnumber" style="width:20%">Document Number<p-sortIcon field="documentnumber"></p-sortIcon></th>
+                 <th pSortableColumn="modifiedDate" style="width:100px">Printed On <p-sortIcon field="modifiedDate"></p-sortIcon></th>
+                 <th pSortableColumn="workflow" style="width:100px">Printed by <p-sortIcon field="modifiedby"></p-sortIcon></th>
+                 <th pSortableColumn="noofcopies" style="width:100px">Print Count <p-sortIcon field="noofcopies"></p-sortIcon></th>
+                 <!-- <th pSortableColumn="Status" style="width:100px">Status <p-sortIcon field="Status"></p-sortIcon></th> -->
+                 <th style="width:80px">Actions</th>
+   
+               </tr>
+             </ng-template>
+             <ng-template pTemplate="body" let-doc let-i="rowIndex">
+               <tr>
+                 <td>{{ i + 1 }}</td>              
+                 <td>{{doc?.printtype}}</td>
+                 <td>{{doc?.documenttitle}}</td>
+                 <td>{{doc?.documentNumber}}</td>
+                 <td>{{doc?.modifiedDate | date}}</td>
+                 <td>{{doc?.modifiedBy}}</td>
+                 <td>{{doc?.noofcopies}}</td>
+   
+                 <!-- <td><span class="status" [ngClass]="getStatusClass(doc['status'])">{{doc.status}} </span></td> -->
+                 <td class="text-center" (click)="editdoc(doc)" *ngIf="access && doc?.status==='In-Progress'"><i class="bi bi-pencil"></i></td>
+                 <td class="text-center" *ngIf="!access">
+                   <i class="bi bi-lock bi-lg" 
+                   [ngClass]="{'text-primary':true}"
+                   title="No Permissions">
+                   </i>
+                 </td>
+                 <td class="text-center" *ngIf="doc?.status==='Approved'">
+                   <i class="bi bi-lock bi-lg" 
+                   [ngClass]="{'text-primary':true}"
+                   title="Approved">
+                   </i>
+                 </td>
+               </tr>
+             </ng-template>
+           </p-table>
+          </div>
       </div>
-    </div>
   </div>
 </div>
+
+
+
+
+
+
+
+
+<style>
+  /* Styles for .custom-input-group */
+  .custom-input-group {
+      background-color: white;
+      display: flex;
+      align-items: center;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+  }
+  .custom-input-group-text {
+          background: white;
+          border: none;
+          padding: 0;
+          vertical-align: middle;
+      }
+
+      .custom-search-icon {
+          font-size: 14px;
+          margin-right: 5px;
+          margin-left: 9px;
+          color: #555;
+      }
+
+      .custom-input {
+          border: none;
+          padding: 5px;
+          vertical-align: middle;
+          background-color: white;
+          box-shadow: none;
+      }
+  </style>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
