--- a/VlimsApp/ClientApp/src/app/modules/manager/components/review-effective/review-effective.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/review-effective/review-effective.component.html
@@ -160,7 +160,7 @@
             >
               Cancel
             </button>
-            <button type="submit" class="btn btn-primary" *ngIf="!viewMode">Submit</button>
+            <button type="submit" class="btn btn-primary" *ngIf="!viewMode" [disabled]="isButtonDisabled">Submit</button>
            
             <button type="button" class="col-xs-1 mx-2  btn btn-success" *ngIf="viewMode && !iscompleted" (click)="approve()">Approve</button>
           <!-- <button type="button" class="col-xs-1 mx-2 offset-sm-1 btn btn-primary" *ngIf="viewMode && !iscompleted" (click)="reinitiative()">Re-Initiative</button> -->
