--- a/VlimsApp/ClientApp/src/app/modules/authentication/components/set-functional-profile/setfunctionalprofile.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/authentication/components/set-functional-profile/setfunctionalprofile.component.html
@@ -495,8 +495,8 @@
   <div class="form-group row my-4" *ngIf="access">
     <div class="col-sm-10 offset-sm-2">
       <button type="button" class="btn btn-outline-secondary mx-2" (click)="onCancel()">Cancel</button>
-      <button type="submit" class="btn btn-primary" *ngIf="!editMode">Submit</button>
-      <button type="submit" class="btn btn-primary" *ngIf="editMode">Update</button>
+      <button type="submit" class="btn btn-primary" *ngIf="!editMode" [disabled]="isButtonDisabled">Submit</button>
+      <button type="submit" class="btn btn-primary" *ngIf="editMode" [disabled]="isButtonDisabled">Update</button>
     </div>
   </div>
 
