--- a/VlimsApp/ClientApp/src/app/modules/documents/components/add-workflow/add-workflow.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/documents/components/add-workflow/add-workflow.component.html
@@ -370,7 +370,7 @@
             >
               Cancel
             </button>
-            <button type="submit" class="btn btn-primary" [disabled]="!fm.form.valid" >Submit</button>
+            <button type="submit" class="btn btn-primary" [disabled]="!fm.form.valid || isButtonDisabled" >Submit</button>
           </div>
         </div>
       </form>
