--- a/VlimsApp/ClientApp/src/app/modules/manager/components/add-request/add-request.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/add-request/add-request.component.html
@@ -82,7 +82,7 @@
             <button type="button" class="btn btn-outline-secondary mx-2" (click)="onCancel()">
               Cancel
             </button>
-            <button type="submit" class="btn btn-primary" *ngIf="!viewMode" [disabled]="!fm.form.valid">Submit</button>
+            <button type="submit" class="btn btn-primary" *ngIf="!viewMode" [disabled]="!fm.form.valid || isButtonDisabled">Submit</button>
             
             <button type="button" class="col-xs-1 mx-2  btn btn-success" *ngIf="viewMode && !iscompleted" (click)="approve()">Approve</button>
             <!-- <button type="button" class="col-xs-1 mx-2 offset-sm-1 btn btn-primary" *ngIf="viewMode && !iscompleted" (click)="reinitiative()">Re-Initiative</button> -->
