--- a/VlimsApp/ClientApp/src/app/modules/documents/components/add-template/add-template.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/documents/components/add-template/add-template.component.html
@@ -35,7 +35,7 @@
                      #TemplatenameInput="ngModel"
                       />
                       <div *ngIf="TemplatenameInput.invalid && (TemplatenameInput.dirty || TemplatenameInput.touched)" class="text-danger">
-                        Enter Template name.
+                        Enter Template Name
                       </div>
           </div>
         </div>
@@ -55,18 +55,15 @@
                    />
                  
           </div>
-          <div *ngIf="ucodeInput.invalid && (ucodeInput.dirty || ucodeInput.touched)" class="text-danger">
-            Enter unique code.
-          </div>
         </div>
         <div class="form-group row">
           <label for="docType" class="col-sm-2 col-form-label">Document Type <span style="color: red; font-weight: bolder;">*</span></label>
           <div class="col-sm-10">
-            <p-dropdown [options]="typesDatasource" [(ngModel)]="selectedtype" placeholder="Select a Document Type"
+            <p-dropdown [options]="typesDatasource" [(ngModel)]="selectedtype" placeholder="Select Document Type"
                 optionLabel="Documenttypename" id="types" name="types" [autoDisplayFirst]="false" [required]="true" #DocumenttypenameInput="ngModel">
              </p-dropdown>
              <div *ngIf="DocumenttypenameInput.invalid && (DocumenttypenameInput.dirty || DocumenttypenameInput.touched)" class="text-danger">
-              Document Type is required.
+              Document Type is required
             </div>
             <!-- <input
               type="text"
@@ -391,7 +388,7 @@
           <button type="button"
                   class="btn btn-outline-secondary mx-2"
                   (click)="onCancel()">
-            Back
+            Cancel
           </button>
           <button type="submit" class="btn btn-primary" [disabled]="!fm.form.valid"  (click)="addTemplate()">{{editMode?'Update':'Submit'}} </button>
           <button type="button" class="col-xs-1 mx-2  btn btn-success" *ngIf="viewMode && templateForm.Status!='Approved'" (click)="approve()">Approve</button>
