--- a/VlimsApp/ClientApp/src/app/modules/documents/components/add-workflow/add-workflow.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/documents/components/add-workflow/add-workflow.component.html
@@ -92,13 +92,13 @@
                 #documentstage="ngModel">
               </p-multiSelect>
               <div *ngIf="documentstage.invalid && (documentstage.dirty || documentstage.touched)" class="text-danger">
-                Document Stage is required.
+                Document Stage is required
               </div>
             </div>
           </div>
           <div class="form-group row">
             <label for="prefix" class="col-sm-2 col-form-label"
-              >Document type <span style="color: red; font-weight: bolder;">*</span> 
+              >Document Type<span style="color: red; font-weight: bolder;">*</span> 
             </label>
             <div class="col-sm-10">
               <p-dropdown
@@ -106,14 +106,14 @@
                 [options]="types"
                 [(ngModel)]="workflow.documenttype"
                 optionLabel="Documenttypename"
-                placeholder="Enter Document Type"
+                placeholder="Select Document Type"
                 optionValue="Documenttypename"
                 [required]="true"
                 [autoDisplayFirst]="false"
                 #documenttypeInput="ngModel">
               </p-dropdown>
               <div *ngIf="documenttypeInput.invalid && (documenttypeInput.dirty || documenttypeInput.touched)" class="text-danger">
-                Document Type is required.
+                Document Type is required
               </div>
             </div>
           </div>
@@ -127,7 +127,7 @@
               <p-multiSelect
                 [options]="departs"
                 [(ngModel)]="workflow.department"
-                placeholder="Enter Department"
+                placeholder="Select Department"
                 name="department"
                 optionLabel="DepartmentName"
                 display="chip"
@@ -135,7 +135,7 @@
                 #departmentInput="ngModel">
               </p-multiSelect>
               <div *ngIf="departmentInput.invalid && (departmentInput.dirty || departmentInput.touched)" class="text-danger">
-                Department is required.
+                Department is required
               </div>
             </div>
           </div>
@@ -280,7 +280,7 @@
                 #approvals="ngModel">
               </p-multiSelect>
               <div *ngIf="approvals.invalid && (approvals.dirty || approvals.touched)" class="text-danger">
-                Approver(s) is required.
+                Approver(s) is required
               </div>
               <!-- <p-dropdown
               name="UserID"
