--- a/VlimsApp/ClientApp/src/app/modules/authentication/components/Department/add-department.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/authentication/components/Department/add-department.component.html
@@ -4,7 +4,7 @@
       
       <div class="col d-flex justify-content-between align-items-center">
 
-        <h4 class="page-title">Add Department Configuration</h4>
+        <h4 class="page-title">{{editMode? 'Modify': 'New' }} Department Registration</h4>
   
         <div class="back-icon" style="margin-right: 10px;">
   
@@ -32,13 +32,13 @@
                      class="form-control"
                      id="departmentName"
                      name="departmentName"
-                     placeholder="Department Name"
+                     placeholder="Enter Department Name"
                      [(ngModel)]="newdept.DepartmentName" [disabled]="editMode"
                      required
                      #departmentNameInput="ngModel" />
            <!-- Show validation error message -->
     <div *ngIf="departmentNameInput.invalid && (departmentNameInput.dirty || departmentNameInput.touched)" class="text-danger">
-      Department Name is required.
+      Department Name is required
     </div>
             </div>
           </div>
@@ -49,13 +49,13 @@
                      class="form-control"
                      id="DepartmentCode"
                      name="DepartmentCode"
-                     placeholder="Department Code"
+                     placeholder="Enter Department Code"
                      [(ngModel)]="newdept.DepartmentCode" [disabled]="viewMode"
                      required
            #DepartmentCodeInput="ngModel" />
             <!-- Show validation error message -->
     <div *ngIf="DepartmentCodeInput.invalid && (DepartmentCodeInput.dirty || DepartmentCodeInput.touched)" class="text-danger">
-      Department Code is required.
+      Department Code is required
             </div>
           </div>
           </div>
@@ -66,7 +66,7 @@
                         id="Comments"
                         name="Comments"
                         rows="3"
-                        placeholder="Comments please"
+                        placeholder="Comments"
                         [(ngModel)]="newdept.Comments" [disabled]="viewMode"
                         
            #CommentsInput="ngModel"></textarea>
@@ -81,7 +81,7 @@
 
         <div class="form-group row my-4">
           <div class="col-sm-10 offset-sm-2">
-            <button type="button" class="btn btn-outline-secondary mx-2" (click)="onCancel()">Back</button>
+            <button type="button" class="btn btn-outline-secondary mx-2" (click)="onCancel()">Cancel</button>
             <button type="submit" class="btn btn-primary" *ngIf="!editMode" [disabled]="!fm.form.valid || isButtonDisabled">Submit</button>
             <button type="submit" class="btn btn-primary" *ngIf="editMode" [disabled]="!fm.form.valid || isButtonDisabled">Update</button>
           </div>
