--- a/VlimsApp/ClientApp/src/app/modules/authentication/components/new-plant-registration/new-plant-registration.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/authentication/components/new-plant-registration/new-plant-registration.component.html
@@ -1,4 +1,3 @@
-
 <div class="container-fluid">
   <div class="row p-2">
     <div class="col">
@@ -22,6 +21,8 @@
   </div>
   <div class="row p-2">
     <div class="col">
+      <form (ngSubmit)="submit(adddoc)" #fm="ngForm">
+
       
         <div class="p-4 bg-white shadow-dark rounded-2">
 
@@ -37,7 +38,7 @@
                      required
                      #plantnameInput="ngModel"  />
                      <div *ngIf="plantnameInput.invalid && (plantnameInput.dirty || plantnameInput.touched)" class="text-danger">
-                      Enter Plant Name.
+                      Plant Name is required
                     </div>
 
             </div>
@@ -55,7 +56,7 @@
                      required
                      #plantcodeInput="ngModel" />
                      <div *ngIf="plantcodeInput.invalid && (plantcodeInput.dirty || plantcodeInput.touched)" class="text-danger">
-                      Enter Plant Code.
+                      Plant Code is required
                     </div>
 
             </div>
@@ -72,7 +73,7 @@
                         #descriptionInput="ngModel">
                       </textarea>
                       <div *ngIf="descriptionInput.invalid && (descriptionInput.dirty || descriptionInput.touched)" class="text-danger">
-                        Enter Plant Address.
+                       Plant Address is required
                       </div>
             </div>
           </div>
@@ -83,9 +84,8 @@
                      class="form-control"
                      id="Comments"
                      name="Comments"
-                     placeholder=""
-                     [(ngModel)]="adddoc.Comments" 
-                     required
+                     placeholder="Comments"
+                     [(ngModel)]="adddoc.Comments"                      
                      #CommentsInput="ngModel" />
                      <div *ngIf="CommentsInput.invalid && (CommentsInput.dirty || CommentsInput.touched)" class="text-danger">
                       
@@ -99,12 +99,12 @@
         <div class="form-group row my-4">
           <div class="col-sm-10 offset-sm-2">
             <button type="button" class="btn btn-outline-secondary mx-2" (click)="onCancel()">Cancel</button>
-            <button type="submit" class="btn btn-primary" *ngIf="!editMode" (click)="submit(adddoc)">Submit</button>
+            <button type="submit" class="btn btn-primary" *ngIf="!editMode" (click)="submit(adddoc)" [disabled]="!fm.form.valid">Submit</button>
             <button type="submit" class="btn btn-primary" *ngIf="editMode">Update</button>
           </div>
         </div>
 
-     
+      </form>
     </div>
   </div>
 </div>
