--- a/VlimsApp/ClientApp/src/app/modules/authentication/components/plantmanagement/plantmanagement.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/authentication/components/plantmanagement/plantmanagement.component.html
@@ -16,7 +16,7 @@
                       <span class="input-group-text custom-input-group-text">
                           <i class="fas fa-search custom-search-icon"></i>
                       </span>
-                      <input type="text" class="form-control custom-input" pInputText type="text" (input)="templatesTable.filterGlobal($any($event.target)?.value, 'contains')"  placeholder="Search">
+                      <input type="text" class="form-control custom-input" pInputText type="text" (input)="templatesTable.filterGlobal($any($event.target)?.value, 'contains')"  placeholder="Search" maxlength="25o">
                   </div>
                     
                   <button class="btn btn-primary mx-2" type="button" (click)="navigateToAddPlant()" *ngIf="access">New</button>
@@ -137,3 +137,4 @@
       }
 
   </style>
+
