--- a/VlimsApp/ClientApp/src/app/modules/authentication/components/register/register.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/authentication/components/register/register.component.html
@@ -37,7 +37,7 @@
                      required
                      #firstnameInput="ngModel" />
                      <div *ngIf="firstnameInput.invalid && (firstnameInput.dirty || firstnameInput.touched)" class="text-danger">
-                      Enter First Name.
+                      First Name is required
                     </div>
             </div>
           </div>
@@ -53,7 +53,7 @@
                      required
                      #lastnameInput="ngModel"/>
                      <div *ngIf="lastnameInput.invalid && (lastnameInput.dirty || lastnameInput.touched)" class="text-danger">
-                      Enter LastName.
+                     Last Name is required
                     </div>
             </div>
           </div>
@@ -64,12 +64,12 @@
                      class="form-control"
                      id="userid"
                      name="userid"
-                     placeholder="Enter User Id"
+                     placeholder="Enter User ID"
                      [(ngModel)]="adduser.UserID" readonly [disabled]="editMode" 
                      required
                      #useridInput="ngModel"/>
                      <div *ngIf="useridInput.invalid && (useridInput.dirty || useridInput.touched)" class="text-danger">
-                      Enter UserId.
+                     User ID is required
                     </div>
 
             </div>
@@ -82,15 +82,17 @@
               name="DepartmentName"
               [options]="types"
               [(ngModel)]="adduser.Department"
-              optionLabel="DepartmentName" placeholder="Select a Department"
-              optionValue="DepartmentName" 
-              [required]="true" 
+              placeholder="Select Department"
+              optionLabel="DepartmentName" 
+               
+              [required]="true"
+               display="chip"
               #djInput="ngModel"
               
               >            
             </p-dropdown>
             <div *ngIf="djInput.invalid && (djInput.dirty || djInput.touched)" class="text-danger">
-              Select Your Role.
+              Department is required
             </div>
 
               <!-- <select class="form-control" [(ngModel)]="adduser.Department" name="department" [disabled]="viewMode">
@@ -108,9 +110,17 @@
               name="Role"
               [options]="roles"
               [(ngModel)]="adduser.Role"
-              optionLabel="Role" placeholder="Select a Role"
-              optionValue="Role"></p-dropdown>
-
+              optionLabel="Role"
+               placeholder="Select Role"
+               display="chip"
+               [required]="true"
+               #roleInput="ngModel"
+              >
+            </p-dropdown>
+              <div *ngIf="roleInput.invalid && (roleInput.dirty || roleInput.touched)" class="text-danger">
+                Role is required
+              </div>
+              
               <!-- <select class="form-control" [(ngModel)]="adduser.Role" name="role" [disabled]="viewMode">
                 <option value="Select">Select</option>
                 <option *ngFor="let role of roles" value={{role.Role}}>{{role?.Role}}</option>
@@ -126,13 +136,13 @@
                      class="form-control"
                      id="doj"
                      name="doj"
-                     placeholder="Enter First Name"
+                     placeholder="Enter DOJ"
                      [(ngModel)]="adduser.Doj" [disabled]="viewMode"
                      required
                      #dojInput="ngModel"
                      />
                      <div *ngIf="dojInput.invalid && (dojInput.dirty || dojInput.touched)" class="text-danger">
-                      Enter DOJ.
+                      DOJ is required
                     </div>
             </div>
           </div>
@@ -148,7 +158,7 @@
                      required
                      #EmpidInput="ngModel"/>
                      <div *ngIf="EmpidInput.invalid && (EmpidInput.dirty || EmpidInput.touched)" class="text-danger">
-                      Enter Employee Id.
+                      Employee Id is required
                     </div>
 
             </div>
@@ -165,7 +175,7 @@
                      required
                      #emailidInput="ngModel"/>
                      <div *ngIf="emailidInput.invalid && (emailidInput.dirty || emailidInput.touched)" class="text-danger">
-                      Enter Email Id.
+                      Email Id is required
                     </div>
 
 
