--- a/VlimsApp/ClientApp/src/app/modules/authentication/components/Roles/roles.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/authentication/components/Roles/roles.component.html
@@ -16,7 +16,7 @@
                       <span class="input-group-text custom-input-group-text">
                           <i class="fas fa-search custom-search-icon"></i>
                       </span>
-                      <input type="text" class="form-control custom-input" pInputText type="text" (input)="templatesTable.filterGlobal($any($event.target)?.value, 'contains')"  placeholder="Search">
+                      <input type="text" class="form-control custom-input" pInputText type="text" (input)="templatesTable.filterGlobal($any($event.target)?.value, 'contains')"  placeholder="Search" maxlength="250">
                   </div>
                     
                   <button class="btn btn-primary mx-2" type="button" (click)="navigateToAddRoles()"  *ngIf="access">New</button>
@@ -40,9 +40,9 @@
                   <th pSortableColumn="Comments" style="width:20%">Comments<p-sortIcon field="Comments"></p-sortIcon></th>
                   <th pSortableColumn="CreatedBy" style="width:200px">Registered By<p-sortIcon field="CreatedBy"></p-sortIcon></th>
                   <th pSortableColumn="CreatedDate" style="width:200px">Registered On <p-sortIcon field="CreatedDate"></p-sortIcon></th>              
-                  <th pSortableColumn="ModifiedBy" style="width:200px">Modify<p-sortIcon field="ModifiedBy"></p-sortIcon></th>
+                  
                   <th pSortableColumn="Status" style="width:200px">Status<p-sortIcon field="Status"></p-sortIcon></th>
-                  <th style="width:80px">Actions</th>
+                  <th style="width:80px">Modify</th>
                 </tr>
               </ng-template>
               <ng-template pTemplate="body" let-doc let-i="rowIndex">
@@ -53,7 +53,7 @@
                   <td>{{doc?.Comments}}</td>
                   <td>{{doc?.CreatedBy}}</td>
                   <td>{{doc?.CreatedDate | date}}</td>              
-                  <td>{{doc?.ModifiedBy}}</td>  
+                  
                   <td><span class="status" [ngClass]="{'status-completed':true}">Active</span></td>           
                   <td class="text-center" (click)="editdoc(doc)" *ngIf="access"><i class="bi bi-pencil"></i></td>
                   <td class="text-center" *ngIf="!access">
