--- a/VlimsApp/ClientApp/src/app/modules/documents/components/assigned/assigned.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/documents/components/assigned/assigned.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
     <div class="row p-2">
         <div class="col">
-            <h4 class="page-title">My Assignment list</h4>
+            <h4 class="page-title">My Assignments List</h4>
         </div>
     </div>
     <div class="row p-2">
@@ -12,15 +12,15 @@
             [rowsPerPageOptions]="rowsPerPageOptions">
                 <ng-template pTemplate="header">
                     <tr>
-                        <th>#</th>
-                        <th pSortableColumn="TaskType" style="width:20%">Task type <p-sortIcon field="TaskType"></p-sortIcon></th>
+                        <th>S.No</th>
+                        <th pSortableColumn="TaskType" style="width:20%">Task Type<p-sortIcon field="TaskType"></p-sortIcon></th>
                         <th pSortableColumn="TaskName" style="width:20%">Document Type<p-sortIcon field="TaskName"></p-sortIcon></th>
-                        <th pSortableColumn="Stage" style="width:10%">Stage <p-sortIcon field="Stage"></p-sortIcon></th>
+                        <th pSortableColumn="Stage" style="width:10%">Stage<p-sortIcon field="Stage"></p-sortIcon></th>
                         <!-- <th pSortableColumn="assignedGroup" style="width:15%">Assigned Group <p-sortIcon field="assignedGroup"></p-sortIcon></th> -->
-                        <th pSortableColumn="initiatedBy" style="width:20%">Initiated By <p-sortIcon field="initiatedBy"></p-sortIcon></th>
-                        <th pSortableColumn="InitiatedOn" style="width:200px">Initiated On <p-sortIcon field="InitiatedOn"></p-sortIcon></th>
-                        <th pSortableColumn="Status" style="width:200px">Status <p-sortIcon field="Status"></p-sortIcon></th>
-                        <th pSortableColumn="InitiatedOn" style="width:200px">Due Date <p-sortIcon field="InitiatedOn"></p-sortIcon></th>
+                        <th pSortableColumn="initiatedBy" style="width:20%">Initiated By<p-sortIcon field="initiatedBy"></p-sortIcon></th>
+                        <th pSortableColumn="InitiatedOn" style="width:200px">Initiated On<p-sortIcon field="InitiatedOn"></p-sortIcon></th>
+                        <th pSortableColumn="Status" style="width:200px">Status<p-sortIcon field="Status"></p-sortIcon></th>
+                        <th pSortableColumn="InitiatedOn" style="width:200px">Due Date<p-sortIcon field="InitiatedOn"></p-sortIcon></th>
 
                     </tr>
                 </ng-template>
