--- a/VlimsApp/ClientApp/src/app/modules/manager/components/Print/document-print.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/Print/document-print.component.html
@@ -44,7 +44,7 @@
                  <th pSortableColumn="workflow" style="width:100px">Printed by <p-sortIcon field="modifiedby"></p-sortIcon></th>
                  <th pSortableColumn="noofcopies" style="width:100px">Print Count <p-sortIcon field="noofcopies"></p-sortIcon></th>
                  <!-- <th pSortableColumn="Status" style="width:100px">Status <p-sortIcon field="Status"></p-sortIcon></th> -->
-                 <th style="width:80px">Actions</th>
+                 <th style="width:80px">Modify</th>
    
                </tr>
              </ng-template>
