--- a/VlimsApp/ClientApp/src/app/modules/manager/components/add-request/add-request.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/add-request/add-request.component.html
@@ -31,10 +31,10 @@
               <p-dropdown name="docType" [options]="typeSource" [(ngModel)]="request.documenttype"
                 optionLabel="Documenttypename" optionValue="Documenttypename" [disabled]="viewMode"
                 [autoDisplayFirst]="false" [required]="true"
-                #DocumenttypeInput="ngModel">
+                #DocumenttypeInput="ngModel" placeholder="Select Document Type">
               </p-dropdown>
               <div *ngIf="DocumenttypeInput.invalid && (DocumenttypeInput.dirty || DocumenttypeInput.touched)" class="text-danger">
-                Document Type is required.
+                Document Type is required
               </div>
             </div>
           </div>
@@ -45,10 +45,10 @@
             <div class="col-sm-10">
               <p-dropdown name="department" [options]="departmentsSource" [(ngModel)]="request.department"
                 optionLabel="DepartmentName" optionValue="DepartmentName" [disabled]="viewMode" [required]="true"
-                [autoDisplayFirst]="false" #DepartmentInput="ngModel">
+                [autoDisplayFirst]="false" #DepartmentInput="ngModel" placeholder="Select Document Type">
               </p-dropdown>
               <div *ngIf="DepartmentInput.invalid && (DepartmentInput.dirty || DepartmentInput.touched)" class="text-danger">
-                Department is required.
+                Department is required
               </div>
             </div>
           </div>
@@ -59,10 +59,10 @@
             <div class="col-sm-10">
               <p-dropdown name="workflow" [options]="workflowsSource" [(ngModel)]="request.workflow"
                 optionLabel="workflowName" optionValue="workflowName" [disabled]="viewMode || editMode" [required]="true"
-                [autoDisplayFirst]="false" #WorkFlowInput="ngModel">
+                [autoDisplayFirst]="false" #WorkFlowInput="ngModel" placeholder="Select Workflow">
               </p-dropdown>
               <div *ngIf="WorkFlowInput.invalid && (WorkFlowInput.dirty || WorkFlowInput.touched)" class="text-danger">
-                Workflow is required.
+                Workflow is required
               </div>
             </div>
           </div>
