--- a/VlimsApp/ClientApp/src/app/modules/authentication/components/usermanagement/usermanagement.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/authentication/components/usermanagement/usermanagement.component.html
@@ -19,7 +19,7 @@
       <div class="card" (click)="navigateTo('User')">
         <div class="card-body">
           <i class="fa fa-message"></i>
-          <h5 class="card-title">User Management</h5>
+          <h5 class="card-title">User Configuration</h5>
         </div>
       </div>
     </div>
