--- a/VlimsApp/ClientApp/src/app/modules/authentication/components/User-configuration/user-configuration.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/authentication/components/User-configuration/user-configuration.component.html
@@ -16,7 +16,7 @@
                       <span class="input-group-text custom-input-group-text">
                           <i class="fas fa-search custom-search-icon"></i>
                       </span>
-                      <input type="text" class="form-control custom-input" pInputText type="text" (input)="templatesTable.filterGlobal($any($event.target)?.value, 'contains')"  placeholder="Search">
+                      <input type="text" class="form-control custom-input" pInputText type="text" (input)="templatesTable.filterGlobal($any($event.target)?.value, 'contains')"  placeholder="Search" maxlength="250">
                   </div>
                     
                   <button class="btn btn-primary mx-2" type="button" (click)="navigateToAddUser()"*ngIf="access">New</button>
@@ -35,16 +35,18 @@
           <ng-template pTemplate="header">
             <tr>
               <th>S.No</th>              
-              <th pSortableColumn="FirstName" style="width:10%">First Name <p-sortIcon field="FirstName"></p-sortIcon></th>
+              <th pSortableColumn="FirstName" style="width:10%">First Name<p-sortIcon field="FirstName"></p-sortIcon></th>
               <th pSortableColumn="LastName" style="width:15%">Last Name<p-sortIcon field="LastName"></p-sortIcon></th>
-              <th pSortableColumn="UserID" style="width:20%">UserId<p-sortIcon field="UserID"></p-sortIcon></th>
+              <th pSortableColumn="UserID" style="width:20%">User ID<p-sortIcon field="UserID"></p-sortIcon></th>
               <th pSortableColumn="Department" style="width:200px">Department<p-sortIcon field="Department"></p-sortIcon></th>
-              <!-- <th pSortableColumn="Empid" style="width:200px">Employee Id<p-sortIcon field="Empid"></p-sortIcon></th> -->
-              <th pSortableColumn="EmailId" style="width:200px">E-mail Id<p-sortIcon field="EmailId"></p-sortIcon></th>
               <th pSortableColumn="Role" style="width:200px">Role <p-sortIcon field="Role"></p-sortIcon></th>
+              <!-- <th pSortableColumn="Empid" style="width:200px">Employee Id<p-sortIcon field="Empid"></p-sortIcon></th> -->
+              <th pSortableColumn="EmailId" style="width:200px">E-Mail ID<p-sortIcon field="EmailId"></p-sortIcon></th>
+              
+              
              
               <th pSortableColumn="Status" style="width:200px">Status <p-sortIcon field="Status"></p-sortIcon></th>
-              <th pSortableColumn="Action" style="width:200px">Action <p-sortIcon field="Action"></p-sortIcon></th>
+              <th pSortableColumn="Action" style="width:200px">Modify<p-sortIcon field="Action"></p-sortIcon></th>
             </tr>
           </ng-template>
           <ng-template pTemplate="body" let-doc let-i="rowIndex">
@@ -55,8 +57,9 @@
               <td>{{doc?.UserID}}</td>
               <td>{{doc?.Department}}</td>
               <!-- <td>{{doc?.Empid}}</td> -->
-              <td>{{doc?.EmailId}}</td>
               <td>{{doc?.Role}}</td>
+              <td>{{doc?.EmailId}}</td>
+              
               <!-- <td>{{doc?.ModifiedBy}}</td> -->
               <td><span class="status"  [ngClass]="getStatusClass(doc['Status'])">{{doc?.Status}} </span></td>
               <td class="text-center" (click)="editdoc(doc)" *ngIf="access"><i class="bi bi-pencil"></i></td>
