--- a/VlimsApp/ClientApp/src/app/modules/authentication/components/new-plant-registration/new-plant-registration.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/authentication/components/new-plant-registration/new-plant-registration.component.html
@@ -35,6 +35,7 @@
                      name="plantname"
                      placeholder="Enter Plant Name" 
                      [(ngModel)]="adddoc.PlantName"
+                     maxlength="50"
                      required
                      #plantnameInput="ngModel"  />
                      <div *ngIf="plantnameInput.invalid && (plantnameInput.dirty || plantnameInput.touched)" class="text-danger">
@@ -47,20 +48,34 @@
           <div class="form-group row">
             <label for="plantcode" class="col-sm-2 col-form-label">Plant Code<span style="color: red; font-weight: bolder;">*</span></label>
             <div class="col-sm-10">
-              <input type="text"
-                     class="form-control"
-                     id="plantcode"
-                     name="plantcode"
-                     placeholder="Enter Plant Code"
-                     [(ngModel)]="adddoc.PlantCode" 
-                     required
-                     #plantcodeInput="ngModel" />
-                     <div *ngIf="plantcodeInput.invalid && (plantcodeInput.dirty || plantcodeInput.touched)" class="text-danger">
-                      Plant Code is required
-                    </div>
-
+              <input
+                type="text"
+                class="form-control"
+                id="plantcode"
+                name="plantcode"
+                placeholder="Enter Plant Code"
+                [(ngModel)]="adddoc.PlantCode"
+                maxlength="6"
+                required
+                pattern="[0-9]+"
+                #plantcodeInput="ngModel"
+              />
+              <div *ngIf="plantcodeInput.invalid && (plantcodeInput.dirty || plantcodeInput.touched)" class="text-danger">
+                <ng-container *ngIf="plantcodeInput.hasError('pattern')">
+                  Please enter only numbers
+                </ng-container>
+                <ng-container *ngIf="plantcodeInput.hasError('required')">
+                  Plant Code is required
+                </ng-container>
+              </div>
             </div>
           </div>
+          
+
+
+
+
+
           <div class="form-group row">
             <label for="description" class="col-sm-2 col-form-label">Plant Address<span style="color: red; font-weight: bolder;">*</span></label>
             <div class="col-sm-10">
@@ -68,6 +83,7 @@
                         id="description"
                         name="description"
                         rows="3"
+                        maxlength="250"
                         placeholder="Enter Plant Address"
                         [(ngModel)]="adddoc.PlantAddress"  required
                         #descriptionInput="ngModel">
@@ -84,6 +100,7 @@
                      class="form-control"
                      id="Comments"
                      name="Comments"
+                     maxlength="250"
                      placeholder="Comments"
                      [(ngModel)]="adddoc.Comments"                      
                      #CommentsInput="ngModel" />
