--- a/VlimsApp/ClientApp/src/app/modules/authentication/components/plantmanagement/plantmanagement.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/authentication/components/plantmanagement/plantmanagement.component.html
@@ -39,12 +39,12 @@
             <tr>
               <th>S.No</th>
               <!--<th pSortableColumn="S.No" style="width:20%">S.No</th>-->
-              <th pSortableColumn="Plant Name" style="width:10%">Plant Name</th>
-              <th pSortableColumn="Plant Code" style="width:15%">Plant Code</th>
-              <th pSortableColumn="PlantAddress" style="width:20%">Plant Address</th>
+              <th pSortableColumn="Plant Name" style="width:10%">Plant Name<p-sortIcon field="Department Name"></p-sortIcon> </th>
+              <th pSortableColumn="Plant Code" style="width:15%">Plant Code<p-sortIcon field="Department Name"></p-sortIcon></th>
+              <th pSortableColumn="PlantAddress" style="width:20%">Address<p-sortIcon field="Department Name"></p-sortIcon></th>
             
-              <th pSortableColumn="Registered By" style="width:200px">Registered By</th>
-              <th pSortableColumn="Registered On" style="width:200px">Registered On </th>
+              <th pSortableColumn="Registered By" style="width:200px">Registered By<p-sortIcon field="Department Name"></p-sortIcon></th>
+              <th pSortableColumn="Registered On" style="width:200px">Registered On<p-sortIcon field="Department Name"></p-sortIcon></th>
               <th style="width:80px">Status</th>
               <th style="width:80px">Modify</th>
 
