--- a/VlimsApp/ClientApp/src/app/modules/authentication/components/Roles/new-role.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/authentication/components/Roles/new-role.component.html
@@ -58,8 +58,10 @@
                 [(ngModel)]="addrole.Department"
                 placeholder="Select Department"
                 optionLabel="DepartmentName"
+              
                 [required]="true"
                 display="chip"
+                optionValue="DepartmentName"
                 #DepartmentNameInput="ngModel">
               
              
