Bug fix in enabling access to Existing document Request

--- a/VlimsApp/ClientApp/src/app/modules/authentication/components/set-functional-profile/setfunctionalprofile.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/authentication/components/set-functional-profile/setfunctionalprofile.component.html
@@ -425,7 +425,7 @@
           />
         </div>
         <label for="profile" class="col-sm-2 col-form-label"
-          >Document Repository</label
+          >Existing Document Request</label
         >
         <div class="col-sm-1">
           <input
